src/test/deca/syntax/invalid/className-asm.synt
className-asm.deca:1:
